# carbon-foot

./: package.json  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: index.py
backend/: index.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/insights/: gemini.py
backend/app/routes/: calculate.py  entries.py  health.py
backend/tests/: test_firestore_repo.py  test_gemini.py  test_rate_limit.py
frontend/: package-lock.json  package.json  playwright.config.ts
