[project]
name = "carbon-platform-backend"
version = "1.3.0"
description = "Carbon Footprint Awareness Platform — FastAPI backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "google-genai==1.9.0",
    "google-cloud-firestore==2.20.0",
    "slowapi==0.1.9",
    "python-json-logger==3.2.1",
    "pyyaml==6.0.2",
    "cachetools==5.5.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Coverage is a hard gate: the build fails if it drops below 90%.
addopts = "-q --cov=app --cov-report=term-missing --cov-fail-under=90"
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["app", "tests"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import order, N naming, D docstrings,
# UP modernisation, ANN type annotations, B bugbear, C4 comprehensions,
# SIM simplification, PL pylint, C90 complexity, RUF ruff-native rules.
select = ["E", "W", "F", "I", "N", "D", "UP", "ANN", "B", "C4", "SIM", "PL", "C90", "RUF"]
# E501: line length handled by formatter; B008: FastAPI's Depends/Query/Path
# default-argument pattern is intentional and idiomatic.
ignore = ["E501", "B008"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Tests: docstring/annotation pedantry and "magic" expected values don't apply.
"tests/**" = ["ANN", "D", "PLR2004"]

[tool.mypy]
# Strict static type checking for the application code.
strict = true
files = ["app"]
python_version = "3.10"
# Pydantic ships a mypy plugin that understands model fields and validators.
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# Google SDKs are imported lazily and ship without complete type stubs.
module = ["google.*", "google.cloud.*"]
ignore_missing_imports = true
